@@ -20,17 +20,21 @@ import marquez.common.models.DatasetName;
 import marquez.common.models.JobName;
 import marquez.common.models.JobType;
 import marquez.common.models.NamespaceName;
+import marquez.common.models.RunId;
+import marquez.common.models.RunState;
 import marquez.db.JobVersionDao.IoType;
 import marquez.db.JobVersionDao.JobDataset;
 import marquez.db.JobVersionDao.JobDatasetMapper;
 import marquez.db.mappers.JobMapper;
 import marquez.db.mappers.JobRowMapper;
+import marquez.db.mappers.RunMapper;
 import marquez.db.models.JobRow;
 import marquez.db.models.NamespaceRow;
 import marquez.service.models.Job;
 import marquez.service.models.JobMeta;
 import marquez.service.models.Run;
 import org.jdbi.v3.sqlobject.config.RegisterRowMapper;
+import org.jdbi.v3.sqlobject.customizer.BindList;
 import org.jdbi.v3.sqlobject.statement.SqlQuery;
 import org.jdbi.v3.sqlobject.statement.SqlUpdate;
 import org.postgresql.util.PGobject;
@@ -38,6 +42,7 @@ import org.postgresql.util.PGobject;
 @RegisterRowMapper(JobRowMapper.class)
 @RegisterRowMapper(JobMapper.class)
 @RegisterRowMapper(JobDatasetMapper.class)
+@RegisterRowMapper(RunMapper.class)
 public interface JobDao extends BaseDao {
 
   @SqlQuery(
@@ -138,14 +143,10 @@ public interface JobDao extends BaseDao {
     Optional<Job> job = findJobByName(namespaceName, jobName);
     job.ifPresent(
         j -> {
-          Optional<Run> run = createRunDao().findByLatestJob(namespaceName, jobName);
-          run.ifPresentOrElse(
-              r -> this.setJobData(r, j),
-              () ->
-                  this.setJobData(
-                      createJobVersionDao()
-                          .findCurrentInputOutputDatasetsFor(namespaceName, jobName),
-                      j));
+          List<Run> runs = createRunDao().findByLatestJob(namespaceName, jobName, 10, 0);
+          this.setJobData(runs, j);
+          this.setJobDataset(
+              createJobVersionDao().findCurrentInputOutputDatasetsFor(namespaceName, jobName), j);
         });
     return job;
   }
@@ -178,13 +179,7 @@ public interface JobDao extends BaseDao {
           FROM
             jobs_view AS j
           WHERE
-            j.namespace_name = :namespaceName
-          ORDER BY
-            j.name
-          LIMIT
-            :limit
-          OFFSET
-            :offset
+            (:namespaceName IS NULL OR j.namespace_name = :namespaceName)
         ),
         job_versions_temp AS (
           SELECT
@@ -192,7 +187,7 @@ public interface JobDao extends BaseDao {
           FROM
             job_versions AS j
           WHERE
-            j.namespace_name = :namespaceName
+            (:namespaceName IS NULL OR j.namespace_name = :namespaceName)
         ),
         facets_temp AS (
         SELECT
@@ -224,7 +219,7 @@ public interface JobDao extends BaseDao {
           ON
               jtm.job_uuid = j.uuid
           AND
-              j.namespace_name = :namespaceName
+              (:namespaceName IS NULL OR j.namespace_name = :namespaceName)
           INNER JOIN
               tags t
           ON
@@ -244,10 +239,19 @@ public interface JobDao extends BaseDao {
           ON f.run_uuid = jv.latest_run_uuid
         LEFT OUTER JOIN job_tags jt
           ON j.uuid  = jt.uuid
+        LEFT JOIN runs r
+          ON r.uuid = j.current_run_uuid
+        WHERE
+         (r.current_run_state IN (<lastRunStates>) OR r.uuid IS NULL)
         ORDER BY
-            j.name
+          j.updated_at DESC
+        LIMIT :limit OFFSET :offset
       """)
-  List<Job> findAll(String namespaceName, int limit, int offset);
+  List<Job> findAll(
+      String namespaceName,
+      @BindList("lastRunStates") List<RunState> lastRunStates,
+      int limit,
+      int offset);
 
   @SqlQuery("SELECT count(*) FROM jobs_view AS j WHERE symlink_target_uuid IS NULL")
   int count();
@@ -267,22 +271,25 @@ public interface JobDao extends BaseDao {
   int countJobRuns(String namespaceName, String job);
 
   @SqlQuery(
-      "SELECT count(*) FROM jobs_view AS j WHERE j.namespace_name = :namespaceName\n"
+      "SELECT count(*) FROM jobs_view AS j WHERE (:namespaceName IS NULL OR j.namespace_name = :namespaceName)\n"
           + "AND symlink_target_uuid IS NULL")
   int countFor(String namespaceName);
 
-  default List<Job> findAllWithRun(String namespaceName, int limit, int offset) {
+  default List<Job> findAllWithRun(
+      String namespaceName, List<RunState> lastRunStates, int limit, int offset) {
     RunDao runDao = createRunDao();
-    return findAll(namespaceName, limit, offset).stream()
+    return findAll(namespaceName, lastRunStates, limit, offset).stream()
         .peek(
-            j ->
-                runDao
-                    .findByLatestJob(namespaceName, j.getName().getValue())
-                    .ifPresent(run -> this.setJobData(run, j)))
-        .collect(Collectors.toList());
+            j -> {
+              List<Run> runs =
+                  runDao.findByLatestJob(
+                      j.getNamespace().getValue(), j.getName().getValue(), 10, 0);
+              this.setJobData(runs, j);
+            })
+        .toList();
   }
 
-  default void setJobData(List<JobDataset> datasets, Job j) {
+  default void setJobDataset(List<JobDataset> datasets, Job j) {
     Optional.of(
             datasets.stream()
                 .filter(d -> d.ioType().equals(IoType.INPUT))
@@ -304,11 +311,17 @@ public interface JobDao extends BaseDao {
         .ifPresent(s -> j.setOutputs(s));
   }
 
-  default void setJobData(Run run, Job j) {
-    j.setLatestRun(run);
+  default void setJobData(List<Run> runs, Job j) {
+    if (runs.isEmpty()) {
+      return;
+    }
+
+    Run latestRun = runs.get(0);
+    j.setLatestRun(latestRun);
+    j.setLatestRuns(runs);
     DatasetVersionDao datasetVersionDao = createDatasetVersionDao();
     j.setInputs(
-        datasetVersionDao.findInputDatasetVersionsFor(run.getId().getValue()).stream()
+        datasetVersionDao.findInputDatasetVersionsFor(latestRun.getId().getValue()).stream()
             .map(
                 ds ->
                     new DatasetId(
@@ -316,7 +329,7 @@ public interface JobDao extends BaseDao {
                         DatasetName.of(ds.getDatasetName())))
             .collect(Collectors.toSet()));
     j.setOutputs(
-        datasetVersionDao.findOutputDatasetVersionsFor(run.getId().getValue()).stream()
+        datasetVersionDao.findOutputDatasetVersionsFor(latestRun.getId().getValue()).stream()
             .map(
                 ds ->
                     new DatasetId(
@@ -351,7 +364,8 @@ public interface JobDao extends BaseDao {
         jobMeta.getDescription().orElse(null),
         toUrlString(jobMeta.getLocation().orElse(null)),
         symlinkTargetUuid,
-        toJson(jobMeta.getInputs(), mapper));
+        toJson(jobMeta.getInputs(), mapper),
+        jobMeta.getRunId().map(RunId::getValue).orElse(null));
   }
 
   default String toUrlString(URL url) {
@@ -370,6 +384,31 @@ public interface JobDao extends BaseDao {
     } catch (Exception e) {
       return null;
     }
+  }
+
+  default JobRow upsertJob(
+      UUID uuid,
+      JobType type,
+      Instant now,
+      UUID namespaceUuid,
+      String namespaceName,
+      String name,
+      String description,
+      String location,
+      UUID symlinkTargetId,
+      PGobject inputs) {
+    return upsertJob(
+        uuid,
+        type,
+        now,
+        namespaceUuid,
+        namespaceName,
+        name,
+        description,
+        location,
+        symlinkTargetId,
+        inputs,
+        null);
   }
 
   /*
@@ -392,7 +431,8 @@ public interface JobDao extends BaseDao {
           current_location,
           current_inputs,
           symlink_target_uuid,
-          parent_job_uuid_string
+          parent_job_uuid_string,
+          current_run_uuid
         ) VALUES (
           :uuid,
           :type,
@@ -405,7 +445,8 @@ public interface JobDao extends BaseDao {
           :location,
           :inputs,
           :symlinkTargetId,
-          ''
+          '',
+          :currentRunUuid
         ) RETURNING *
       """)
   JobRow upsertJob(
@@ -418,7 +459,8 @@ public interface JobDao extends BaseDao {
       String description,
       String location,
       UUID symlinkTargetId,
-      PGobject inputs);
+      PGobject inputs,
+      UUID currentRunUuid);
 
   /*
    * Note: following SQL never executes. There is database trigger on `jobs_view`
@@ -440,7 +482,8 @@ public interface JobDao extends BaseDao {
           description,
           current_location,
           current_inputs,
-          symlink_target_uuid
+          symlink_target_uuid,
+          current_run_uuid
         ) VALUES (
           :uuid,
           :parentJobUuid,
@@ -453,7 +496,8 @@ public interface JobDao extends BaseDao {
           :description,
           :location,
           :inputs,
-          :symlinkTargetId
+          :symlinkTargetId,
+          :currentRunUuid
         )
         RETURNING *
       """)
@@ -468,7 +512,8 @@ public interface JobDao extends BaseDao {
       String description,
       String location,
       UUID symlinkTargetId,
-      PGobject inputs);
+      PGobject inputs,
+      UUID currentRunUuid);
 
   @SqlUpdate(
       """
